--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -46,7 +46,6 @@
             justify-content: end;
             align-items: center;
             gap: 1rem;
-            margin: 0 50px 0 0;
             input {
                 height: 38px;
                 width: 230px;
@@ -68,6 +67,96 @@
                 flex-direction: column;
                 justify-content: end;
             }
+        }
+        ul {
+            flex-direction: row;
+            display: flex;
+            justify-content: center;
+            list-style-type: none;
+            li {
+                list-style: none;
+                width: 250px;
+                margin: auto;
+                h2 {
+                    font-size: 1rem;
+                    margin: 20px 0 5px 15px;
+                    text-transform: uppercase;
+                    font-family: Arial, Helvetica, sans-serif;
+                }
+                #nav__check:checked ~ ul{
+                    visibility: visible;
+                    opacity: 1;
+                    position: absolute;
+                }
+                #nav__check {
+                    display: none;
+                }
+                .nav__usuario {
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    margin: auto;
+                    .label__usuario {
+                        width: 35px;
+                        height: auto;
+                        margin: auto;
+                    }
+                }
+                ul {
+                    width: 550px;
+                    display: flex;
+                    flex-direction: column;
+                    background: #fff;
+                    position: absolute;
+                    margin-left: -320px;
+                    top: 80px;
+                    padding: 13px 0px;
+                    visibility: hidden;
+                    opacity: 0;
+                    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
+                    z-index: 10;
+                    transition: all 300ms ease;
+                    li {
+                        width: 100%;
+                        .nav__form__sesion {
+                            display: block;
+                            transition: all 400ms ease;
+                            padding: 5px 15px;
+                            text-align: left;
+                            font-family: Arial, Helvetica, sans-serif;
+                            width: 100%;
+                            display: flex;
+                            gap: 3px;
+                            flex-direction: column;         
+                            input {
+                                width: 100%;
+                                padding: 0 5px;
+                                height: 30px;
+                                font-size: 1rem;
+                                outline: none;
+                                margin-top: 1px;
+                            }
+                            button {
+                                background-color: #9e822e;
+                                border-radius: 6px;
+                                color: white;
+                                border: 0;
+                                padding: 10px;
+                                font-family: sans-serif;
+                                height: auto;
+                                width: 100%;
+                                cursor: pointer;
+                            }
+                            button:hover {
+                                opacity: .9;
+                            }
+                        }
+                    }
+                    
+                }
+                
+            }
+            
         }
     }
 
