--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -92,6 +92,7 @@
                 li {
                     ul {
                         width: 250px;
+                        margin-left: 0px;
                         top: 170px;
                     }     
                 }  
